--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,8 @@ body {
 .container {
     background-color: white;
     margin-top: 20px;
+    max-width: 750px;
+    /* padding-right: 50px; */
 }
 
 #name {
