--- a/assets/portfolio.css
+++ b/assets/portfolio.css
@@ -6,6 +6,13 @@ body {
 .container {
     background-color: white;
     margin-top: 20px;
+    max-width: 750px;
+}
+
+@media only screen and (max-width: 768px) {
+    .container{
+        max-width:400px;
+    }
 }
 
 #name {
