--- a/assets/style.css
+++ b/assets/style.css
@@ -29,10 +29,6 @@ h2 {
     padding-bottom: 10px;
 }
 
-.row-2 {
-    padding-top: 10px;
-}
-
 #hover {
     color: black;
 }
@@ -43,4 +39,8 @@ h2 {
 
 #hover:active {
     color: black;
+}
+
+#dog-image {
+    height: 250px;
 }
